impc_prod_tracker/kube/wp/sandbox/api-service/api-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-service-sandbox
  name: api-service-sandbox
  namespace: mi-production-tracker-sandbox
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: api-service-sandbox
  #
  # Note:
  # To use an Ingress Controller
  # the type should be set as ClusterIP
  # rather than NodePort or LoadBalancer.
  #
  type: ClusterIP
